--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 
 script:
  # Basic role syntax check
- - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+ - ansible-playbook --syntax-check -i inventory test.yml
 
 notifications:
  webhooks: https://galaxy.ansible.com/api/v1/notifications/
