--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,9 @@
 ---
 galaxy_info:
-  author: "Julien DAUPHANT"
+  role_name: ssh_config_generator
+  author: "Sébastien Brousse"
   license: BSD
-  min_ansible_version: 1.5
+  min_ansible_version: 2.5
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your
